--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "serve.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test ./node_modules/.bin/jasmine"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/mdamaceno/devshow/issues"
   },
-  "homepage": "https://github.com/mdamaceno/devshow#readme"
+  "homepage": "https://github.com/mdamaceno/devshow#readme",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "express": "^4.16.1"
+  },
+  "devDependencies": {
+    "jasmine": "^2.8.0"
+  }
 }
