--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "express": "^4.16.1",
-    "qs": "^6.5.1"
+    "node-fetch": "^1.7.3",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "jasmine": "^2.8.0"
